SA | Overflow problem fixed for some page

--- a/client/src/Styles/App.css
+++ b/client/src/Styles/App.css
@@ -4,3 +4,8 @@
   margin-left: auto;
   margin-right: auto;
 }
+#glints-site{
+  overflow: hidden !important;
+  padding: 0px;
+  margin: 0px;
+}
